tests/baselines/reference/superCallBeforeThisAccessing1.errors.txt
tests/cases/conformance/classes/superCallBeforeThisAccessing1.ts(11,17): error TS2304: Cannot find name 'Factory'.


==== tests/cases/conformance/classes/superCallBeforeThisAccessing1.ts (1 errors) ====
    class Base {
        constructor(c) { }
    }
    class D extends Base {
        private _t;
        constructor() {
            super(i);
            var s = {
                t: this._t
            }
            var i = Factory.create(s);
                    ~~~~~~~
!!! error TS2304: Cannot find name 'Factory'.
        }
    }
    